--- a/en/index.html
+++ b/en/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
 <head>
 	<!-- Required meta tags -->
@@ -38,7 +38,7 @@
 
 	<title>나라별 인기 얼굴</title>
 
-	<link rel="stylesheet" href="style.css">
+	<link rel="stylesheet" href="../../style.css">
 	<!-- Go to www.addthis.com/dashboard to customize your tools -->
 	<script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-5eb7fd59e5163dee"></script>
 
@@ -58,7 +58,7 @@
 		<div class="collapse navbar-collapse" id="navbarNav">
 			<ul class="navbar-nav">
 				<li class="nav-item active">
-					<a class="nav-link" href="https://www.countrybyface.com/">홈
+					<a class="nav-link" href="https://www.countrybyface.com/">Home
 						<span class="sr-only">(current)</span>
 					</a>
 				</li>
