--- a/zh/index.html
+++ b/zh/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="zh">
 
 <head>
 	<!-- Required meta tags -->
@@ -82,11 +82,11 @@
 	     <section class="container d-flex flex-column justify-content-center align-items-center">
         <span class="select-language">Language</span>
         <select onchange="changeLanguage(this)" class="custom-select col-8">
+			<option value="zh" lang="zh">中文</option>
+			<option value="ko" lang="ko">한국어</option>
 			<option value="en" lang="en">English</option>
-            <option value="ko" lang="ko">한국어</option>
-            <option value="es" lang="es">español</option>
-            <option value="ja" lang="ja">日本語</option>
-            <option value="zh" lang="zh">中文</option>
+			<option value="es" lang="es">español</option>
+			<option value="ja" lang="ja">日本語</option>
         </select>
     </section>
     <script>
