--- a/en/index.html
+++ b/en/index.html
@@ -318,78 +318,78 @@
 			switch (prediction[0].className) {
 				case "Korea":
 					resultMessage = "한국에서 인기 있는 상"
-					document.getElementById("flag1").src = "Flags/Korea.png";
-					document.getElementById("flag2").src = "Flags/Korea.png";
+					document.getElementById("flag1").src = "../../Flags/Korea.png";
+					document.getElementById("flag2").src = "../../Flags/Korea.png";
 					break;
 				case "China":
 					resultMessage = "중국에서 인기 있는 상"
-					document.getElementById("flag1").src = "Flags/China.png";
-					document.getElementById("flag2").src = "Flags/China.png";
+					document.getElementById("flag1").src = "../../Flags/China.png";
+					document.getElementById("flag2").src = "../../Flags/China.png";
 					break;
 				case "Japan":
 					resultMessage = "일본에서 인기 있는 상"
-					document.getElementById("flag1").src = "Flags/Japan.png";
-					document.getElementById("flag2").src = "Flags/Japan.png";
+					document.getElementById("flag1").src = "../../Flags/Japan.png";
+					document.getElementById("flag2").src = "../../Flags/Japan.png";
 					break;
 				case "USA":
 					resultMessage = "미국에서 인기 있는 상"
-					document.getElementById("flag1").src = "Flags/USA.png";
-					document.getElementById("flag2").src = "Flags/USA.png";
+					document.getElementById("flag1").src = "../../Flags/USA.png";
+					document.getElementById("flag2").src = "../../Flags/USA.png";
 					break;
 				case "Canada":
 					resultMessage = "캐나다에서 인기 있는 상"
-					document.getElementById("flag1").src = "Flags/Canada.png";
-					document.getElementById("flag2").src = "Flags/Canada.png";
+					document.getElementById("flag1").src = "../../Flags/Canada.png";
+					document.getElementById("flag2").src = "../../Flags/Canada.png";
 					break;
 				case "Mexico":
 					resultMessage = "맥시코에서 인기 있는 상"
-					document.getElementById("flag1").src = "Flags/Mexico.png";
-					document.getElementById("flag2").src = "Flags/Mexico.png";
+					document.getElementById("flag1").src = "../../Flags/Mexico.png";
+					document.getElementById("flag2").src = "../../Flags/Mexico.png";
 					break;
 				case "India":
 					resultMessage = "인도에서 인기 있는 상"
-					document.getElementById("flag1").src = "Flags/India.png";
-					document.getElementById("flag2").src = "Flags/India.png";
+					document.getElementById("flag1").src = "../../Flags/India.png";
+					document.getElementById("flag2").src = "../../Flags/India.png";
 					break;
 				case "Arab":
 					resultMessage = "아랍에서 인기 있는 상"
-					document.getElementById("flag1").src = "Flags/ArabFederation.png";
-					document.getElementById("flag2").src = "Flags/ArabFederation.png";
+					document.getElementById("flag1").src = "../../Flags/ArabFederation.png";
+					document.getElementById("flag2").src = "../../Flags/ArabFederation.png";
 					break;
 				case "Italy":
 					resultMessage = "이탈리아에서 인기 있는 상"
-					document.getElementById("flag1").src = "Flags/Italy.png";
-					document.getElementById("flag2").src = "Flags/Italy.png";
+					document.getElementById("flag1").src = "../../Flags/Italy.png";
+					document.getElementById("flag2").src = "../../Flags/Italy.png";
 					break;
 				case "Spain":
 					resultMessage = "스페인에서 인기 있는 상"
-					document.getElementById("flag1").src = "Flags/Spain.png";
-					document.getElementById("flag2").src = "Flags/Spain.png";
+					document.getElementById("flag1").src = "../../Flags/Spain.png";
+					document.getElementById("flag2").src = "../../Flags/Spain.png";
 					break;
 				case "France":
 					resultMessage = "프랑스에서 인기 있는 상"
-					document.getElementById("flag1").src = "Flags/France.png";
-					document.getElementById("flag2").src = "Flags/France.png";
+					document.getElementById("flag1").src = "../../Flags/France.png";
+					document.getElementById("flag2").src = "../../Flags/France.png";
 					break;
 				case "Germany":
 					resultMessage = "독일에서 인기 있는 상"
-					document.getElementById("flag1").src = "Flags/Germany.png";
-					document.getElementById("flag2").src = "Flags/Germany.png";
+					document.getElementById("flag1").src = "../../Flags/Germany.png";
+					document.getElementById("flag2").src = "../../Flags/Germany.png";
 					break;
 				case "UK":
 					resultMessage = "영국에서 인기 있는 상"
-					document.getElementById("flag1").src = "Flags/UK.png";
-					document.getElementById("flag2").src = "Flags/UK.png";
+					document.getElementById("flag1").src = "../../Flags/UK.png";
+					document.getElementById("flag2").src = "../../Flags/UK.png";
 					break;
 				case "Brazil":
 					resultMessage = "브라질에서 인기 있는 상"
-					document.getElementById("flag1").src = "Flags/Brazil.png";
-					document.getElementById("flag2").src = "Flags/Brazil.png";
+					document.getElementById("flag1").src = "../../Flags/Brazil.png";
+					document.getElementById("flag2").src = "../../Flags/Brazil.png";
 					break;
 				case "Russia":
 					resultMessage = "러시아에서 인기 있는 상"
-					document.getElementById("flag1").src = "Flags/Russia.png";
-					document.getElementById("flag2").src = "Flags/Russia.png";
+					document.getElementById("flag1").src = "../../Flags/Russia.png";
+					document.getElementById("flag2").src = "../../Flags/Russia.png";
 					break;
 				default:
 					resultMessage = "알수없음"
