--- a/en/index.html
+++ b/en/index.html
@@ -30,7 +30,7 @@
 	<meta property="og:type" content="website">
 	<meta property="og:title" content="나라별 인기 얼굴">
 	<meta property="og:description" content="구글 AI를 활용하여 만든 나라별 인기 얼굴 사이트 입니다.">
-	<meta property="og:image" content="opengraph.png">
+	<meta property="og:image" content="../../opengraph.png">
 	<meta property="og:url" content="https://www.countrybyface.com/">
 
 	<!-- favicon -->
@@ -42,7 +42,7 @@
 	<!-- Go to www.addthis.com/dashboard to customize your tools -->
 	<script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-5eb7fd59e5163dee"></script>
 
-	<link rel="icon" href="icon.png" sizes="16x16" />
+	<link rel="icon" href="../../icon.png" sizes="16x16" />
 	<script data-ad-client="ca-pub-8225214401653078" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 
 	<meta charset="UTF-8">
@@ -83,8 +83,8 @@
         <span class="select-language">Language</span>
         <select onchange="changeLanguage(this)" class="custom-select col-8">
 			<option value="en" lang="en">English</option>
-            <option value="ko" lang="ko">한국어</option>
-            <option value="es" lang="es">español</option>
+			<option value="ko" lang="ko">한국어</option>
+			<option value="es" lang="es">español</option>
             <option value="ja" lang="ja">日本語</option>
             <option value="zh" lang="zh">中文</option>
         </select>
