--- a/ja/index.html
+++ b/ja/index.html
@@ -30,7 +30,7 @@
 	<meta property="og:type" content="website">
 	<meta property="og:title" content="나라별 인기 얼굴">
 	<meta property="og:description" content="구글 AI를 활용하여 만든 나라별 인기 얼굴 사이트 입니다.">
-	<meta property="og:image" content="opengraph.png">
+	<meta property="og:image" content="../../opengraph.png">
 	<meta property="og:url" content="https://www.countrybyface.com/">
 
 	<!-- favicon -->
@@ -42,7 +42,7 @@
 	<!-- Go to www.addthis.com/dashboard to customize your tools -->
 	<script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-5eb7fd59e5163dee"></script>
 
-	<link rel="icon" href="icon.png" sizes="16x16" />
+	<link rel="icon" href="../../icon.png" sizes="16x16" />
 	<script data-ad-client="ca-pub-8225214401653078" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 
 	<meta charset="UTF-8">
@@ -58,7 +58,7 @@
 		<div class="collapse navbar-collapse" id="navbarNav">
 			<ul class="navbar-nav">
 				<li class="nav-item active">
-					<a class="nav-link" href="https://www.countrybyface.com/">Home
+					<a class="nav-link" href="https://www.countrybyface.com/">Japanese Home
 						<span class="sr-only">(current)</span>
 					</a>
 				</li>
@@ -318,78 +318,78 @@
 			switch (prediction[0].className) {
 				case "Korea":
 					resultMessage = "한국에서 인기 있는 상"
-					document.getElementById("flag1").src = "Flags/Korea.png";
-					document.getElementById("flag2").src = "Flags/Korea.png";
+					document.getElementById("flag1").src = "../../Flags/Korea.png";
+					document.getElementById("flag2").src = "../../Flags/Korea.png";
 					break;
 				case "China":
 					resultMessage = "중국에서 인기 있는 상"
-					document.getElementById("flag1").src = "Flags/China.png";
-					document.getElementById("flag2").src = "Flags/China.png";
+					document.getElementById("flag1").src = "../../Flags/China.png";
+					document.getElementById("flag2").src = "../../Flags/China.png";
 					break;
 				case "Japan":
 					resultMessage = "일본에서 인기 있는 상"
-					document.getElementById("flag1").src = "Flags/Japan.png";
-					document.getElementById("flag2").src = "Flags/Japan.png";
+					document.getElementById("flag1").src = "../../Flags/Japan.png";
+					document.getElementById("flag2").src = "../../Flags/Japan.png";
 					break;
 				case "USA":
 					resultMessage = "미국에서 인기 있는 상"
-					document.getElementById("flag1").src = "Flags/USA.png";
-					document.getElementById("flag2").src = "Flags/USA.png";
+					document.getElementById("flag1").src = "../../Flags/USA.png";
+					document.getElementById("flag2").src = "../../Flags/USA.png";
 					break;
 				case "Canada":
 					resultMessage = "캐나다에서 인기 있는 상"
-					document.getElementById("flag1").src = "Flags/Canada.png";
-					document.getElementById("flag2").src = "Flags/Canada.png";
+					document.getElementById("flag1").src = "../../Flags/Canada.png";
+					document.getElementById("flag2").src = "../../Flags/Canada.png";
 					break;
 				case "Mexico":
 					resultMessage = "맥시코에서 인기 있는 상"
-					document.getElementById("flag1").src = "Flags/Mexico.png";
-					document.getElementById("flag2").src = "Flags/Mexico.png";
+					document.getElementById("flag1").src = "../../Flags/Mexico.png";
+					document.getElementById("flag2").src = "../../Flags/Mexico.png";
 					break;
 				case "India":
 					resultMessage = "인도에서 인기 있는 상"
-					document.getElementById("flag1").src = "Flags/India.png";
-					document.getElementById("flag2").src = "Flags/India.png";
+					document.getElementById("flag1").src = "../../Flags/India.png";
+					document.getElementById("flag2").src = "../../Flags/India.png";
 					break;
 				case "Arab":
 					resultMessage = "아랍에서 인기 있는 상"
-					document.getElementById("flag1").src = "Flags/ArabFederation.png";
-					document.getElementById("flag2").src = "Flags/ArabFederation.png";
+					document.getElementById("flag1").src = "../../Flags/ArabFederation.png";
+					document.getElementById("flag2").src = "../../Flags/ArabFederation.png";
 					break;
 				case "Italy":
 					resultMessage = "이탈리아에서 인기 있는 상"
-					document.getElementById("flag1").src = "Flags/Italy.png";
-					document.getElementById("flag2").src = "Flags/Italy.png";
+					document.getElementById("flag1").src = "../../Flags/Italy.png";
+					document.getElementById("flag2").src = "../../Flags/Italy.png";
 					break;
 				case "Spain":
 					resultMessage = "스페인에서 인기 있는 상"
-					document.getElementById("flag1").src = "Flags/Spain.png";
-					document.getElementById("flag2").src = "Flags/Spain.png";
+					document.getElementById("flag1").src = "../../Flags/Spain.png";
+					document.getElementById("flag2").src = "../../Flags/Spain.png";
 					break;
 				case "France":
 					resultMessage = "프랑스에서 인기 있는 상"
-					document.getElementById("flag1").src = "Flags/France.png";
-					document.getElementById("flag2").src = "Flags/France.png";
+					document.getElementById("flag1").src = "../../Flags/France.png";
+					document.getElementById("flag2").src = "../../Flags/France.png";
 					break;
 				case "Germany":
 					resultMessage = "독일에서 인기 있는 상"
-					document.getElementById("flag1").src = "Flags/Germany.png";
-					document.getElementById("flag2").src = "Flags/Germany.png";
+					document.getElementById("flag1").src = "../../Flags/Germany.png";
+					document.getElementById("flag2").src = "../../Flags/Germany.png";
 					break;
 				case "UK":
 					resultMessage = "영국에서 인기 있는 상"
-					document.getElementById("flag1").src = "Flags/UK.png";
-					document.getElementById("flag2").src = "Flags/UK.png";
+					document.getElementById("flag1").src = "../../Flags/UK.png";
+					document.getElementById("flag2").src = "../../Flags/UK.png";
 					break;
 				case "Brazil":
 					resultMessage = "브라질에서 인기 있는 상"
-					document.getElementById("flag1").src = "Flags/Brazil.png";
-					document.getElementById("flag2").src = "Flags/Brazil.png";
+					document.getElementById("flag1").src = "../../Flags/Brazil.png";
+					document.getElementById("flag2").src = "../../Flags/Brazil.png";
 					break;
 				case "Russia":
 					resultMessage = "러시아에서 인기 있는 상"
-					document.getElementById("flag1").src = "Flags/Russia.png";
-					document.getElementById("flag2").src = "Flags/Russia.png";
+					document.getElementById("flag1").src = "../../Flags/Russia.png";
+					document.getElementById("flag2").src = "../../Flags/Russia.png";
 					break;
 				default:
 					resultMessage = "알수없음"
