--- a/ja/index.html
+++ b/ja/index.html
@@ -214,7 +214,7 @@
 			<section class="youtube pb-3">
 				<div class="container mt-3">
 					<a href="https://www.youtube.com/channel/UCQNE2JmbasNYbjGAcuBiRRg" class="youtube-link">제작 도움: 조코딩 유튜브 채널</a>
-					<img src="img/youtube-copy.jpg" alt="youtube-icon" class="youtube-icon">
+					<img src="../../img/youtube-copy.jpg" alt="youtube-icon" class="youtube-icon">
 				</div>
 			</section>
 		</div>
