--- a/en/index.html
+++ b/en/index.html
@@ -63,13 +63,13 @@
 					</a>
 				</li>
 				<li class="nav-item">
-					<a class="nav-link" href="#">데이터 베이스</a>
+					<a class="nav-link" href="#">Database</a>
 				</li>
 				<li class="nav-item">
-					<a class="nav-link" href="https://teachablemachine.withgoogle.com/">구글 AI</a>
+					<a class="nav-link" href="https://teachablemachine.withgoogle.com/">Google AI</a>
 				</li>
 				<li class="nav-item">
-					<a class="nav-link" href="https://www.countrybyface.com/privacy.html">개인정보처리방침</a>
+					<a class="nav-link" href="https://www.countrybyface.com/privacy.html">Privacy Policy</a>
 				</li>
 			</ul>
 		</div>
@@ -121,7 +121,7 @@
 	</section>
 
 	<section class="d-flex justify-content-center" style="margin-bottom: 30px">
-        <p class="d-flex align-items-center pr-3">여자</p>
+        <p class="d-flex align-items-center pr-3">Female</p>
         <div>
             <input type="checkbox" id="gender">
             <label for="gender">
@@ -130,21 +130,21 @@
                 </span>
             </label>
         </div>
-        <p class="d-flex align-items-center pl-3">남자</p>
+        <p class="d-flex align-items-center pl-3">Male</p>
     </section>
 	
 	<div class="file-upload">
-		<button class="file-upload-btn" type="button" onclick="$('.file-upload-input').trigger( 'click' )">사진 넣기</button>
+		<button class="file-upload-btn" type="button" onclick="$('.file-upload-input').trigger( 'click' )">Insert Photo</button>
 
 		<div class="image-upload-wrap">
 			<input class="file-upload-input" type='file' onchange="readURL(this);" accept="image/*" />
 			<div class="drag-text">
-				<h3>사진을 올려 놓으세요!</h3>
+				<h3>Drag and Drop Your Photo Here!</h3>
 			</div>
 		</div>
 		<div class="file-upload-content">
 			<div class="image-title-wrap">
-				<button type="button" onclick="removeUpload()" class="remove-image">다른 사진으로 다시하기
+				<button type="button" onclick="removeUpload()" class="remove-image">Try Again
 				</button>
 			</div>
 			<div class="row">
@@ -167,7 +167,7 @@
 			</div>
 
 			<div class="congrat" style="display: none">
-				<b>축하합니다!</b>
+				<b>Congrats!</b>
 			</div>
 			<p class="result-message"></p>
 			<div id="label-container" class="d-flex flex-column justify-content-around"></div>
@@ -213,7 +213,7 @@
 			</p>
 			<section class="youtube pb-3">
 				<div class="container mt-3">
-					<a href="https://www.youtube.com/channel/UCQNE2JmbasNYbjGAcuBiRRg" class="youtube-link">제작 도움: 조코딩 유튜브 채널</a>
+					<a href="https://www.youtube.com/channel/UCQNE2JmbasNYbjGAcuBiRRg" class="youtube-link">Assisted by 조코딩 유튜브 채널</a>
 					<img src="../../img/youtube-copy.jpg" alt="youtube-icon" class="youtube-icon">
 				</div>
 			</section>
