--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 					</a>
 				</li>
 				<li class="nav-item">
-					<a class="nav-link" href="#">데이터 베이스</a>
+					<a class="nav-link" href="database/index.html">데이터 베이스</a>
 				</li>
 				<li class="nav-item">
 					<a class="nav-link" href="https://teachablemachine.withgoogle.com/">구글 AI</a>
@@ -210,11 +210,15 @@
 			</ul>
 			<p class="text-muted small mb-0">Copyright © CountryFace 2020</p>
 			<p class="text-muted small mb-0">Designed by
-				<a href="https://portfoliosimulator.netlify.app/" target="_balnk">John Hong</a>
+				<a href="https://portfoliosimulator.netlify.app/" target="_balnk">John Hong &</a> 
+				<a href = "mailto: yongshim086@gmail.com" target="_balnk">Yong Shim</a>
+			</p>
+			<p class="text-muted small mb-0">Translated by
+				<a href = "mailto: yongshim086@gmail.com" target="_balnk">Woojin (Matthew) Chang</a>
 			</p>
 			<section class="youtube pb-3">
 				<div class="container mt-3">
-					<a href="https://www.youtube.com/channel/UCQNE2JmbasNYbjGAcuBiRRg" class="youtube-link">제작 도움: 조코딩 유튜브 채널</a>
+					<a href="https://www.youtube.com/channel/UCQNE2JmbasNYbjGAcuBiRRg" class="youtube-link" target="_balnk">제작 도움: 조코딩 유튜브 채널</a>
 					<img src="img/youtube-copy.jpg" alt="youtube-icon" class="youtube-icon">
 				</div>
 			</section>
