--- a/en/index.html
+++ b/en/index.html
@@ -51,7 +51,7 @@
 
 <body>
 	<nav class="navbar navbar-expand-lg navbar-light nav-distance">
-		<a class="navbar-brand" href="https://www.countrybyface.com/">나는 어느나라에서 호감상 일까?</a>
+		<a class="navbar-brand" href="https://www.countrybyface.com/">Which country would I be popular in?</a>
 		<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
 			<span class="navbar-toggler-icon"></span>
 		</button>
@@ -112,11 +112,10 @@
 	
 	<section class="section">
 		<h1 class="title">
-			나라별
-			<u>인기 있는</u> 얼굴 상
+			Beauty standards by countries
 		</h1>
 		<h2 class="subtitle">
-			AI가 보는 나는 어느 나라에서 인기가 많을까?
+			Which country would I be popular in?
 		</h2>
 	</section>
 
