--- a/en/index.html
+++ b/en/index.html
@@ -115,7 +115,7 @@
 			Beauty standards by countries
 		</h1>
 		<h2 class="subtitle">
-			Which country would I be popular in?
+			Which country would I be the most popular in?
 		</h2>
 	</section>
 
