--- a/en/index.html
+++ b/en/index.html
@@ -58,12 +58,12 @@
 		<div class="collapse navbar-collapse" id="navbarNav">
 			<ul class="navbar-nav">
 				<li class="nav-item active">
-					<a class="nav-link" href="https://www.countrybyface.com/">Home
+					<a class="nav-link" href="https://www.countrybyface.com/en/index.html">Home
 						<span class="sr-only">(current)</span>
 					</a>
 				</li>
 				<li class="nav-item">
-					<a class="nav-link" href="#">Database</a>
+					<a class="nav-link" href="../../database/index.html">Database</a>
 				</li>
 				<li class="nav-item">
 					<a class="nav-link" href="https://teachablemachine.withgoogle.com/">Google AI</a>
@@ -208,7 +208,8 @@
 			</ul>
 			<p class="text-muted small mb-0">Copyright © CountryFace 2020</p>
 			<p class="text-muted small mb-0">Designed by
-				<a href="https://portfoliosimulator.netlify.app/" target="_balnk">John Hong</a>
+				<a href="https://portfoliosimulator.netlify.app/" target="_balnk">John Hong &</a> 
+				<a href = "mailto: yongshim086@gmail.com" target="_balnk">Yong Shim</a>
 			</p>
 			<section class="youtube pb-3">
 				<div class="container mt-3">
